Updating the Index pages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<p><a href="ECW_Patient_Record_Test_AI.html">Please click here to go to ECW Demo</a> </p>
+<p><a href="ECW_Patient_Record_Test_AI.html">Please click here to go to ECW Patient Dashboard</a> </p>
+<p><a href="ECW_Patient_Appointments_Test_AI.html">Please click here to go to ECW Appointment Dashboard</a> </p>
+<p><a href="CCW-AshwiniIyer-Prescription.html">Please click here to go to ECW Prescription Dashboard</a> </p>
+<p><a href="CCW-AshwiniIyer-Medication.html">Please click here to go to ECW Medical Dashboard</a> </p>
+<p><a href="CCW-AshwiniIyer-Billing.html">Please click here to go to ECW Billing Dashboard</a> </p>
 </body>
 </html>
