Removing Basic wording

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Ashwini Iyer Demo Page</h1>
 <p><a href="ECW_Patient_Record_Test_AI.html">Please click here to go to ECW Patient Dashboard</a> </p>
 <p><a href="ECW_Patient_Appointments_Test_AI.html">Please click here to go to ECW Appointment Dashboard</a> </p>
 <p><a href="CCW-AshwiniIyer-Prescription.html">Please click here to go to ECW Prescription Dashboard</a> </p>
