--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Ashwini Iyer Demo Page</h1>
+<p><a href="/Epic/Epic_Patient_Record_Test_Camila_Lopez">Please click here to go to Epic Patient Dashboard</a> </p>
 <p><a href="ECW_Patient_Record_Test_AI.html">Please click here to go to ECW Patient Dashboard</a> </p>
 <p><a href="ECW_Patient_Appointments_Test_AI.html">Please click here to go to ECW Appointment Dashboard</a> </p>
 <p><a href="CCW-AshwiniIyer-Prescription.html">Please click here to go to ECW Prescription Dashboard</a> </p>
