--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5KZQMJNW');</script>
+<!-- End Google Tag Manager -->
+</head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5KZQMJNW"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <h1>Ashwini Iyer Demo Page</h1>
 <p><a href="/Epic/Epic_Patient_Record_Test_Camila_Lopez">Please click here to go to Epic Patient Dashboard</a> </p>
 <p><a href="ECW_Patient_Record_Test_AI.html">Please click here to go to ECW Patient Dashboard</a> </p>
@@ -8,5 +21,59 @@
 <p><a href="CCW-AshwiniIyer-Prescription.html">Please click here to go to ECW Prescription Dashboard</a> </p>
 <p><a href="CCW-AshwiniIyer-Medication.html">Please click here to go to ECW Medical Dashboard</a> </p>
 <p><a href="CCW-AshwiniIyer-Billing.html">Please click here to go to ECW Billing Dashboard</a> </p>
+<!-- Place this code snippet anywhere you want the button to appear in your page. If no button has been configured in the chat script, it will not show up nor take any space. -->
+    <div id="__8x8-chat-button-container-script_108229928868498201e46ca6.61548696"></div>
+
+    <!-- This script will not interfere with the button layout, you just need to include it in the same page. It must also be within the <body> section of the page, preferably just before the ending tag. -->
+    <script type="text/javascript">
+    (function(c, f, ef){
+        var typeofC = Object.prototype.toString.call(c);
+        var props = (typeofC === '[object Object]' && c) || {};
+        var cb = f || (typeofC === '[object Function]' && c);
+        var config = {
+            scriptUuid: "script_108229928868498201e46ca6.61548696",
+            tenant: "aGVhbHRoZWhyZGVtb3Rlc3QwMQ",
+            channelName: "GTM-WebChat",
+            channelUuid: "faLnSb3NS1y1USgGpSgSOg",
+            domain: "https://vcc-na6.8x8.com",
+            buttonContainerId: "__8x8-chat-button-container-script_108229928868498201e46ca6.61548696",
+            align: "right",
+        };
+
+        var url = new URL("https://cloud8-cc-geo.8x8.com/vcc-chat-channels/public/webchat/discovery");
+        var params = { domain: config.domain, tenant: config.tenant, channelUuid: config.channelUuid };
+        url.search = new URLSearchParams(params).toString();
+        fetch(url)
+            .then(response => response.json())
+            .then(data => config.domain = !data.domain ? config.domain : data.domain)
+            .catch(error => console.warn('Failed to retrieve override domain, will continue using ', config.domain, error))
+            .finally(() => loadChat());
+
+        function loadChat() {
+            var se = document.createElement("script");
+            se.type = "text/javascript";
+            se.async = true;
+            se.src = props.loaderURL || (config.domain + "/CHAT/common/js/chatv3.js");
+            Object.keys(config).forEach(function (k) { se.dataset[k] = config[k] });
+            Object.keys(props).forEach(function (k) { se.dataset[k] = props[k] });
+            function handleInitEvent(e) {
+                var initFn = e.detail.init;
+                initFn(config, cb);
+                se.removeEventListener('init', handleInitEvent)
+            }
+            function handleErrorEvent(e) {
+                ef && ef(e);
+                se.removeEventListener('customerror', handleErrorEvent);
+            }
+            se.addEventListener('init', handleInitEvent);
+            se.addEventListener('customerror', handleErrorEvent);
+            var os = document.getElementsByTagName("script")[0];
+            os.parentNode.insertBefore(se, os);
+        }
+    })(function (chatApp) {
+window.chatApp = chatApp;
+},
+);
+    </script>
 </body>
 </html>
