--- a/Epic/Epic_Patient_Record_Test_Camila_Lopez.html
+++ b/Epic/Epic_Patient_Record_Test_Camila_Lopez.html
@@ -118,7 +118,34 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             var os = document.getElementsByTagName("script")[0];
             os.parentNode.insertBefore(se, os);
         }
-    })();
+    })((function getEmailFromDivClass(){
+		// To find the first email input within a div with a specific class
+		const emailInput = document.querySelector('div.values__value input[type="Email"]');
+
+		// To find all email inputs within divs with a specific class
+		//const emailInputs = document.querySelectorAll('div.values__value input[type="Email"]');
+
+		// Example usage:
+		if (emailInput) {
+		console.log("Found email input:", emailInput.value);
+		return emailInput;
+		})
+		//emailInputs.forEach(input => {
+		//console.log("Found email input:", input.value);
+		//return emailInputs;
+		//})
+		
+		// Call the function
+	const emailAddress = getEmailFromDivClass();
+	console.log("Found emailAddress:", emailAddress.value);
+	function (chatApp) {
+	// set variables
+	if(emailAddress)
+	{
+	 chatApp.setVariables({"$emailAddress": emailAddress})
+	}
+	else {chatApp.setVariables({"$emailAddress": "ashwini.iyer@test.com"})}
+  });
     </script>
 
 <div><div class="ant-modal-root"><div class="ant-modal-mask ant-modal-mask-hidden"></div><div tabindex="-1" class="ant-modal-wrap custom-modal-wrap custom-choosepatient-wrap" role="dialog" style="display: none;"></div></div></div></body></html>
