--- a/Epic/Epic_Patient_Record_Test_Camila_Lopez.html
+++ b/Epic/Epic_Patient_Record_Test_Camila_Lopez.html
@@ -121,7 +121,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     })((function getEmailFromDivClass(){
 		// To find the first email input within a div with a specific class
 		const emailInput = document.querySelector('div.values__value input[type="Email"]');
-
+        console.log("Found email input:", emailInput.value);
 		// To find all email inputs within divs with a specific class
 		//const emailInputs = document.querySelectorAll('div.values__value input[type="Email"]');
 
@@ -130,19 +130,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		console.log("Found email input:", emailInput.value);
 		return emailInput;
 		})
-		//emailInputs.forEach(input => {
-		//console.log("Found email input:", input.value);
-		//return emailInputs;
-		//})
 		
+		let emailAddress = getEmailFromDivClass();
+		console.log("Found emailAddress:", emailAddress.value);
 		// Call the function
-	const emailAddress = getEmailFromDivClass();
-	console.log("Found emailAddress:", emailAddress.value);
+		let keyVariable = "$emailAddress";
+		let valueVariable = emailAddress;
+
+		let userProfile = {
+		[keyVariable]: valueVariable,
+		};
+	    console.log(userProfile);
+	
 	function (chatApp) {
 	// set variables
 	if(emailAddress)
 	{
-	 chatApp.setVariables({"$emailAddress": emailAddress})
+	 
+	 chatApp.setVariables(userProfile)
 	}
 	else {chatApp.setVariables({"$emailAddress": "ashwini.iyer@test.com"})}
   });
