Adding new files for testing
Adding new files for testing

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <h1>Ashwini Iyer Demo Page</h1>
+<p>>a href="/Epic/Ashwini_Iyer_Test_Email_On_Button_Click">Please Click here for Email Automation</a></p>
 <p><a href="/Epic/Epic_Patient_Record_Test_Camila_Lopez">Please click here to go to Epic Patient Dashboard</a> </p>
 <p><a href="ECW_Patient_Record_Test_AI.html">Please click here to go to ECW Patient Dashboard</a> </p>
 <p><a href="ECW_Patient_Appointments_Test_AI.html">Please click here to go to ECW Appointment Dashboard</a> </p>
